[package]
name = "imferris"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0.73"

[dependencies]
imgui = "0.8.2"
detour = "0.8.1"
anyhow = "1.0.58"
once_cell = "1.13.0"

[dependencies.windows]
version = "0.38.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
]
