[package]
name = "imferris"
version = "0.1.0"
edition = "2021"
description = "Proof of concept internal DirectX 11 menu"
readme = "README.md"
homepage = "https://github.com/ynuwenhof/imferris"
repository = "https://github.com/ynuwenhof/imferris"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
eyre = "0.6.8"
imgui = "0.11.0"
once_cell = "1.17.1"
parking_lot = "0.12.1"
retour = "0.1.0"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
]

[build-dependencies]
cc = "1.0.79"
